--- a/src/app/components/circuits/circuits.component.html
+++ b/src/app/components/circuits/circuits.component.html
@@ -19,8 +19,8 @@
                         <table class="table table-striped table-bordered table-list">
                             <thead>
                                 <tr>
-                                    <th></th>
-                                    <th><em class="fa fa-cog"></em></th>
+                                    <th style="width: 20px;"><input type="checkbox" /></th>
+                                    <th class="text-center">Actions</th>
                                     <th scope="col">Circuit</th>
                                     <th scope="col">Parish Association</th>
                                 </tr>
@@ -28,12 +28,18 @@
                             <tbody>
                                 <tr *ngFor="let circuitInfo of circuits">
                                     <td><input type="checkbox" /></td>
-                                    <td align="center">
-                                        <a class="btn btn-default" (click)="editCircuit(circuitInfo.id)"><i class="fa fa-edit"></i></a>
-                                        <a class="btn btn-danger" (click)="deleteCircuit(circuitInfo.id)"><em class="fa fa-trash"></em></a>
+                                    <td class="text-center" style="width: 120px;">
+                                        <a class='btn btn-info btn-xs' (click)="editCircuit(circuitInfo.id)">
+                                            <span class="fa fa-edit"></span> Edit
+                                        </a>
+                                        <a class="btn btn-danger btn-xs" (click)="deleteCircuit(circuitInfo.id)">
+                                            <span class="fa fa-remove"></span> Del
+                                        </a>
                                     </td>
+
                                     <td>{{circuitInfo.circuit}}</td>
-                                    <td>{{getParish(circuitInfo.parishCode)}} </td>
+                                    <td>{{circuitInfo.parishCode}}</td>
+                                    <!-- <td>{{getParish(circuitInfo.parishCode)}} </td> -->
                                 </tr>
                             </tbody>
                         </table>
@@ -48,29 +54,9 @@
                         </div>
                     </div>
                 </div>
-                <div class="panel-footer">
-                    <div class="row">
-                        <div class="col-md-4 col-xs-4">Page 1 of 5
-                        </div>
-                        <div class="col-md-8 col-xs-8">
-                            <ul class="pagination hidden-xs pull-right">
-                                <li><a href="#">1</a></li>
-                                <li><a href="#">2</a></li>
-                                <li><a href="#">3</a></li>
-                                <li><a href="#">4</a></li>
-                                <li><a href="#">5</a></li>
-                            </ul>
-                            <ul class="pagination visible-xs pull-right">
-                                <li><a href="#">«</a></li>
-                                <li><a href="#">»</a></li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
-
 </div>
 
 <div class="view-side-form">
