--- a/src/app/components/churches/churches.component.html
+++ b/src/app/components/churches/churches.component.html
@@ -1,37 +1,33 @@
 <div class="row">
-    <div class="col-4">
-        <div class="input-group" id="adv-search">
-            <input type="text" class="form-control" placeholder="Search..." />
-            <div class="input-group-btn">
-                <div class="btn-group" role="group">
-                    <div class="dropdown dropdown-lg">
-                        <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
-                        <div class="dropdown-menu dropdown-menu-right" role="menu">
-                            <div class="form-group">
-                                <label for="filter">Filter by Circuit</label>
-                                <select class="form-control">
-                                <option value="0" selected>All Snippets</option>
-                                <option value="1">Featured</option>
-                                <option value="2">Most popular</option>
-                                <option value="3">Top rated</option>
-                                <option value="4">Most commented</option>
-                            </select>
-                            </div>
+    <div class="col-md-4">
+        <div class="row" style="margin-bottom: 10px;">
+            <div class="col-md-12">
+                <button class="btn btn-success btn-block" (click)="addChurch();">Add Church</button>
+            </div>
+        </div>
+        <div class="panel panel-default">
+            <div class="panel-heading">
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Username" aria-describedby="basic-addon1">
+                </div>
+            </div>
+            <div class="panel-body">
+                <div class="list-group">
+                    <a class="list-group-item" (click)='showChurch()'>
+                        <div class="desc"> uu</div>
+                        <div class="options text-right">
+                            <a class="fa fa-edit" title="Edit" (click)='editChurch();$event.stopPropagation()'> Edit</a> | <a class="fa fa-trash" title="Delete" (click)='deleteChurch();$event.stopPropagation()'> Delete</a>
                         </div>
-                    </div>
-                    <button type="button" class="btn btn-light">Reset</button>
+                    </a>
                 </div>
             </div>
         </div>
-        <div class="list-group">
-            <a href="#" class="list-group-item list-group-item-action active">
-              Cras justo odio
-            </a>
-            <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
-            <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
-            <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
-            <a href="#" class="list-group-item list-group-item-action disabled">Vestibulum at eros</a>
-        </div>
     </div>
-    <div class="col-8">k</div>
+    <div class="col-md-8">
+        <router-outlet></router-outlet>
+    </div>
+</div>
+
+<div class="view-side-form">
+    <router-outlet name="task"></router-outlet>
 </div>
