--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -31,4 +31,7 @@
     </div>
     <!-- /.container-fluid -->
 </nav>
-<router-outlet></router-outlet>
+
+<div class="container">
+    <router-outlet></router-outlet>
+</div>
