modification of church wizard to work when selecting the tabs to show the corresponding page

--- a/src/app/components/church-add-edit/church-add-edit.component.html
+++ b/src/app/components/church-add-edit/church-add-edit.component.html
@@ -7,7 +7,7 @@
             <div class="wizard__progress">
                 <ul class="wizard__labels nav nav-tabs">
                     <li style="width:25%;" class="col-xs-12" *ngFor="let wizard of wizard_tabs" [ngClass]="{'active': wizard.isSelected}">
-                        <a href="{{wizard.content}}" data-toggle="tab">
+                        <a href="{{wizard.content}}" data-toggle="tab" (click)="selectPage(wizard.order)">
                             <i class="{{wizard.icon}} wizard__icon"></i> {{ wizard.title }}
                         </a>
                     </li>
