--- a/src/app/components/church-add-edit/church-add-edit.component.html
+++ b/src/app/components/church-add-edit/church-add-edit.component.html
@@ -1,171 +1,162 @@
 <div class="side-form">
-    <div class="container">
+    <div>
         <div class="wizard" id="myWizard">
             <section>
                 <h4 class="text-center">{{title}}</h4>
             </section>
             <div class="wizard__progress">
                 <ul class="wizard__labels nav nav-tabs">
-                    <li style="width:25%;" class="col-xs-12" *ngFor="let wizard of wizard_tabs" [ngClass]="{'active': wizard.isSelected}">
+                    <li style="width:33.33%;" class="col-xs-12" *ngFor="let wizard of wizard_tabs" [ngClass]="{'active': wizard.isSelected}">
                         <a href="{{wizard.content}}" data-toggle="tab" (click)="selectPage(wizard.order)">
                             <i class="{{wizard.icon}} wizard__icon"></i> {{ wizard.title }}
                         </a>
                     </li>
                 </ul>
                 <div class="progress">
-                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="1" aria-valuemin="1" aria-valuemax="3" style="width: 25%;"> </div>
+                    <div class="progress-bar progress-bar-success" role="progressbar" aria-valuenow="1" aria-valuemin="1" aria-valuemax="3" style="width: 33.33%;"> </div>
                 </div>
             </div>
-            <div class="tab-content">
-                <div class="tab-pane fade in" id="churchInfo" [ngClass]="{'active show': isSelected('#churchInfo')}">
-                    <section>
-                        <div class="form-group">
-                            <label>Church Name</label>
-                            <input type="text" name="churchName" class="form-control">
-                        </div>
-                        <div class="form-group ">
-                            <label class="control-label " for="nid-type ">Circuit </label>
-                            <select class="form-control">
-                                <option value="0">Please Select</option>
-                                <option *ngFor="let circuit of circuits" >{{ circuit.circuit }}</option>
-                            </select>
-                        </div>
+            <form [formGroup]="churchForm">
+                <div class="tab-content">
+                    <div class="tab-pane fade in" id="churchInfo" [ngClass]="{'active show': isSelected('#churchInfo')}">
+                        <section>
+                            <div class="form-group">
+                                <label>Church Name</label>
+                                <input type="text" name="churchName" class="form-control" formControlName="church">
+                            </div>
+                            <div class="form-group ">
+                                <label class="control-label " for="nid-type ">Circuit </label>
+                                <select class="form-control" formControlName="circuit">
+                                    <option value="0">Please Select</option>
+                                    <option *ngFor="let circuit of circuits" >{{ circuit.circuit }}</option>
+                                </select>
+                            </div>
 
-                        <div class="row">
-                            <div class="col-sm-8">
-                                <div class="form-group ">
-                                    <label class="control-label " for="seat_quota "> Date Constituted <span class="required ">*</span></label>
-                                    <input type="date" class="form-control" id="date_const ">
-                                </div>
-                            </div>
-                            <!-- / end col -->
-                            <div class="col-sm-4 ">
-                                <div class="form-group ">
-                                    <label class="control-label " for="seat_quota "> Seating Capacity <span class="required ">*</span></label>
-                                    <input type="number " class="form-control input-sm " id="seat_quota ">
-                                </div>
-                            </div>
-                            <!-- / end col -->
-                        </div>
-                        <!-- worship times panel  -->
-                        <div class="panel">
-                            <div class="panel-header">
-                                <span class="text-center">Worship Times</span>
-                            </div>
-                            <div class="panel-body" style="height: 200px;">
-                                <div class="add-content">
-                                    <div class="input-group">
-                                        <input type="time" class="form-control input-sm ">
-                                        <span class="input-group-btn">
-                                            <button class="btn btn-success btn-add btn-sm" type="button" (click)="addWorshipTime()">
-                                                <span class="fa fa-plus"></span>
-                                        </button>
-                                        </span>
+                            <div class="row">
+                                <div class="col-sm-8 col-md-8">
+                                    <div class="form-group ">
+                                        <label class="control-label " for="seat_quota "> Date Constituted <span class="required ">*</span></label>
+                                        <div class="input-group">
+                                            <input class="form-control" style="float:none" placeholder="Select a date" ngx-mydatepicker name="myDate" formControlName="dateConst" [options]="myOptions" #dp="ngx-mydatepicker" (dateChanged)="onDateChanged($event)" />
+
+                                            <span class="input-group-btn">
+                                                <button type="button" class="btn btn-default" (click)="dp.clearDate()">
+                                                    <i class="glyphicon glyphicon-remove"></i>
+                                                </button>
+                                                <button type="button" class="btn btn-default" (click)="dp.toggleCalendar()">
+                                                    <i class="glyphicon glyphicon-calendar"></i>
+                                                </button>
+                                            </span>
+                                        </div>
                                     </div>
                                 </div>
-                                <hr/>
-                                <div class="content" style="height: 120px;overflow-y:auto">
-                                    <!-- <div class="input-group" *ngFor="let worship_time of church.worship_times">
-                                        <input type="time" class="form-control input-sm ">
-                                        <span class="input-group-btn">
-                                            <button class="btn btn-danger btn-delete" type="button">
-                                                <span class="fa fa-minus" (click)="deleteWorshipTime(worship_time)"></span>
-                                        </button>
-                                        </span>
-                                    </div> -->
+                                <!-- / end col -->
+                                <div class="col-sm-4 col-md-4">
+                                    <div class="form-group ">
+                                        <label class="control-label " for="seat_quota "> Seating Capacity <span class="required ">*</span></label>
+                                        <input type="number " class="form-control input-sm " id="seat_quota ">
+                                    </div>
                                 </div>
+                                <!-- / end col -->
                             </div>
-                        </div>
-                        <br/>
-                    </section>
-                </div>
-                <div class="tab-pane fade in " id="addressContact" [ngClass]="{'active show' : isSelected('#addressContact')}">
-                    <section>
-
-                        <div class="form-group">
-                            <label for="church_street">Street</label>
-                            <input type="text" class="form-control" />
-                        </div>
-                        <div class="row">
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="church_street">Town</label>
-                                    <input type="text" class="form-control" />
+                            <!-- worship times panel  -->
+                            <div class="panel">
+                                <div class="panel-header">
+                                    <span class="text-center">Worship Times</span>
                                 </div>
-                            </div>
-                            <div class="col-md-6">
-                                <div class="form-group">
-                                    <label for="parish">Associated Parish</label>
-                                    <select class="form-control">
-                                        <option value="">Please Select</option>
-                                        <option *ngFor="let parish of parishes" [ngValue]="parish.code">{{parish.parish }}</option>
-                                    </select>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="panel">
-                            <div class="panel-header">Contacts</div>
-                            <div class="panel-body">
-                                <div class="add-content">
-                                    <div class="row">
-                                        <div class="col-md-6">
-                                            <select class="form-control">
-                                                <option>e</option>>
-                                            </select>
-                                        </div>
-                                        <div class="col-md-6">
-                                            <div class="input-group">
-                                                <input type="text" class="form-control input-sm ">
-                                                <span class="input-group-btn">
-                                                    <button class="btn btn-success btn-add" type="button" (click)="addContact()">
+                                <div class="panel-body" style="height: 200px;">
+                                    <div class="add-content">
+                                        <div class="input-group">
+                                            <input type="time" class="form-control input-sm ">
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-success btn-add btn-sm" type="button" (click)="addWorshipTime()">
                                                     <span class="fa fa-plus"></span>
-                                                </button>
-                                                </span>
+                                            </button>
+                                            </span>
+                                        </div>
+                                    </div>
+                                    <hr/>
+                                    <div class="content" style="height: 120px;overflow-y:auto">
+                                        <!-- <div class="input-group" *ngFor="let worship_time of church.worship_times">
+                                            <input type="time" class="form-control input-sm ">
+                                            <span class="input-group-btn">
+                                                <button class="btn btn-danger btn-delete" type="button">
+                                                    <span class="fa fa-minus" (click)="deleteWorshipTime(worship_time)"></span>
+                                            </button>
+                                            </span>
+                                        </div> -->
+                                    </div>
+                                </div>
+                            </div>
+                            <br/>
+                        </section>
+                    </div>
+                    <div class="tab-pane fade in " id="addressContact" [ngClass]="{'active show' : isSelected('#addressContact')}">
+                        <section>
+
+                            <div class="form-group">
+                                <label for="church_street">Street</label>
+                                <input type="text" class="form-control" />
+                            </div>
+                            <div class="form-group">
+                                <label for="church_street">Town</label>
+                                <input type="text" class="form-control" />
+                            </div>
+
+                            <div class="panel">
+                                <div class="panel-header">Contacts</div>
+                                <div class="panel-body">
+                                    <div class="add-content">
+                                        <button class="btn btn-success btn-add" type="button" (click)="addContact()"></button>
+                                    </div>
+                                    <hr/>
+                                    <!-- <div class="content" style="height: 120px;overflow-y:auto">
+                                        <div formArrayName="contacts" *ngFor="let contactInfo of churchForm.get('contacts'); let i = index;">
+                                            <div [formGroupName]="i">
+                                                <input formControlName="contact" placeholder="Item name">
+
+                                                <div class="input-group">
+                                                    <input formControlName="contactType" placeholder="Item description"> <span class="input-group-btn">
+                                                        <button class="btn btn-danger btn-delete" type="button">
+                                                        <span class="fa fa-minus" (click)="deleteContact()"></span>
+                                                    </button>
+                                                    </span>
+                                                </div>
                                             </div>
                                         </div>
-                                    </div>
-                                </div>
-                                <hr/>
-                                <div class="content" style="height: 120px;overflow-y:auto">
-                                    <!-- <div class="input-group" *ngFor="let contact of church.contacts">
-                                        <input type="time" class="form-control input-sm ">
-                                        <span class="input-group-btn">
-                                                <button class="btn btn-danger btn-delete" type="button">
-                                                    <span class="fa fa-minus" (click)="deleteContact(contact)"></span>
-                                        </button>
-                                        </span>
                                     </div> -->
                                 </div>
                             </div>
-                        </div>
 
-                    </section>
+                        </section>
+
+                    </div>
+                    <div class="tab-pane fade in" id="churchMission" [ngClass]="{'active show': isSelected('#churchMission')}">
+                        <section>
+                            <div class="panel">
+                                <div class="panel-header">Church Missions</div>
+                                <div class="panel-body">
+                                    <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#exampleModal">Add Mission</button>
+                                </div>
+                                <div class="mission-content">
+
+                                </div>
+                            </div>
+                        </section>
+                    </div>
 
                 </div>
-                <div class="tab-pane fade in" id="churchMission" [ngClass]="{'active show': isSelected('#churchMission')}">
-                    <section>
-                        <div class="panel">
-                            <div class="panel-header">Church Missions</div>
-                            <div class="panel-body">
-                                <button type="button" class="btn btn-primary btn-block" data-toggle="modal" data-target="#exampleModal">Add Mission</button>
-                            </div>
-                            <div class="mission-content">
+                <div>
+                    <section class="row text-right">
+                        <button type="button " class="btn btn-primary" (click)="prevPage()" [ngClass]="{'hide': isFirstPage()}">Back</button>
+                        <button type="button " class="btn btn-default" (click)="nextPage()" [ngClass]="{'hide': isLastPage()}">Continue</button>
+                        <button type="submit" (click)="saveChurch()" class="btn btn-default" [ngClass]="{'hide': !isLastPage()}">Save</button>
+                        <button type="button " class="btn btn-default" (click)="cancelAction()">Cancel</button>
 
-                            </div>
-                        </div>
                     </section>
                 </div>
+            </form>
 
-            </div>
-
-            <div>
-                <section class="text-right">
-                    <button type="button " class="btn btn-primary btn-sm " (click)="prevPage()" [ngClass]="{'hide': isFirstPage()}">Back</button>
-                    <button type="button " class="btn btn-default btn-sm" (click)="nextPage()" [ngClass]="{'hide': isLastPage()}">Continue</button>
-                    <button type="button " class="btn btn-default btn-sm next" [ngClass]="{'hide': !isLastPage()}">Save</button>
-                    <button type="button " class="btn btn-default btn-sm next " (click)="cancelAction()">Cancel</button>
-                </section>
-            </div>
 
         </div>
     </div>
