--- a/src/app/components/visitors/visitors.component.html
+++ b/src/app/components/visitors/visitors.component.html
@@ -1,3 +1,76 @@
-<p>
-  visitors works!
-</p>
+<div class="container">
+
+    <div class="row content">
+        <div class="col-md-4">
+            <div class="row" style="margin-bottom: 10px;">
+                <div class="col-md-12">
+                    <button class="btn btn-success btn-block" (click)="addVisitor();">Add Visitor</button>
+                </div>
+            </div>
+
+            <div class="panel panel-default tree">
+                <div class="panel-heading">
+                    <div class="input-group">
+                        <!-- USE TWITTER TYPEAHEAD JSON WITH API TO SEARCH -->
+                        <input class="form-control" id="system-search" name="q" placeholder="Search for" required>
+                        <span class="input-group-btn">
+                        <button type="submit" class="btn btn-default"><i class="glyphicon glyphicon-search"></i></button>
+                    </span>
+                    </div>
+                </div>
+                <div class="panel-body">
+                    <!-- TREEVIEW CODE -->
+                    <div class="treeview">
+                        <ul>
+                            <li><a href="#">Tree</a>
+                                <ul>
+                                    <li><a href="#">Branch</a></li>
+                                    <li><a href="#">Branch</a>
+                                        <ul>
+                                            <li><a href="#">Stick</a></li>
+                                            <li><a href="#">Stick</a></li>
+                                            <li><a href="#">Stick</a>
+                                                <ul>
+                                                    <li><a href="#">Twig</a></li>
+                                                    <li><a href="#">Twig</a></li>
+                                                    <li><a href="#">Twig</a></li>
+                                                    <li><a href="#">Twig</a>
+                                                        <ul>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                            <li><a href="#">Leaf</a></li>
+                                                        </ul>
+                                                    </li>
+                                                    <li><a href="#">Twig</a></li>
+                                                    <li><a href="#">Twig</a></li>
+                                                </ul>
+                                            </li>
+                                            <li><a href="#">Stick</a></li>
+                                        </ul>
+                                    </li>
+                                    <li><a href="#">Branch</a></li>
+                                    <li><a href="#">Branch</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                    </div>
+                    <!-- TREEVIEW CODE -->
+                </div>
+            </div>
+        </div>
+        <div class="col-md-8">
+            <router-outlet></router-outlet>
+        </div>
+    </div>
+</div>
+
+
+<div class="view-side-form">
+    <router-outlet name="task"></router-outlet>
+</div>
