--- a/src/app/components/church-item/church-item.component.html
+++ b/src/app/components/church-item/church-item.component.html
@@ -3,7 +3,7 @@
     <h3>Church Name</h3>
     <span class="monospace"> Linstead/Buxton Town Circuit </span> | <span class="monospace"> 350 members </span> | <span class="monospace"> 34 classes </span>
     <br/>
-    <a class="text-center" (click)="editChurch()"><i class="fa fa-edit"></i> Edit Church</a>
+    <a class="text-center" (click)="editChurch()"><i class="fa fa-edit"></i> Edit Church</a> | <a class="text-center" (click)="editChurch()"><i class="fa fa-edit"></i> Add Contact</a> | <a class="text-center" (click)="editChurch()"><i class="fa fa-edit"></i> Add Mission</a>
 </div>
 <hr/>
 <div class="panel panel-default" style="padding: 10px;">
